--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -116,6 +116,15 @@
     <string name="force_ambient_for_media_on_forced">Enabled and forced</string>
     <string name="force_ambient_for_media_on_forced_clean">Enabled and forced minimal</string>
     <string name="ambient_ticker_footer">Ambient Music Ticker allows for the ability to show the current music track info on the lockscreen with or without Ambient display enabled.\nYou can select from two layouts, normal and minimal. While this feature takes advantage of ambient display, it does not depend on it.</string>
+
     <!-- Pixel color on sim card -->
     <string name="default_sim_color">Pixel</string>
+
+    <!-- Doze battery options -->
+    <string name="ambient_display_show_battery_cat">Battery Status</string>
+    <string name="ambient_display_show_battery_icon">Enable</string>
+    <string name="ambient_display_show_battery_icon_summary">Show battery indicator during pulse</string>
+    <string name="ambient_display_show_battery_percent">Percent</string>
+    <string name="ambient_display_show_battery_percent_summary">Show battery percent during pulse</string>
+
 </resources>
