Let's use last screenOn brightness value for ambient display [2/2]

--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -131,4 +131,7 @@
   <string name="ambient_display_show_battery_icon_summary">Показывать индикатор батареи на активном экране</string>
   <string name="ambient_display_show_battery_percent">Проценты</string>
   <string name="ambient_display_show_battery_percent_summary">Показывать процент заряда на активном экране</string>
+  <string name="ambient_display_category_other">Разное</string>
+  <string name="ambient_doze_auto_brightness_title">Автояркость активного экрана</string>
+  <string name="ambient_doze_auto_brightness_summary">Использовать автояркость для активного экрана</string>
 </resources>
