--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -150,4 +150,8 @@
     <string name="ambient_display_show_battery_percent">Percent</string>
     <string name="ambient_display_show_battery_percent_summary">Show battery percent during pulse</string>
 
+    <!-- Ambient Display Brightness -->
+    <string name="ambient_display_category_other">Other</string>
+    <string name="ambient_doze_auto_brightness_title">Ambient and LiftToWake auto brightness</string>
+    <string name="ambient_doze_auto_brightness_summary">Use last screen-on adaptive brightness value for Ambient Display or Lift to Wake screen</string>
 </resources>
