--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -69,9 +69,13 @@
   
   <string name="increasing_ring_volume_option_title">Возрастающая громкость звонка</string>
   <string name="increasing_ring_ramp_up_title">Время увеличения</string>
+  <string name="increasing_ring_volume_option_summary">Увеличьте громкость звонка до выбранного уровня</string>
 
   <string name="ramp_up_time_ten">10c</string>
   <string name="ramp_up_time_twenty">20c</string>
   <string name="ramp_up_time_thirty">30c</string>
   <string name="ramp_up_time_sixty">60c</string>
+  
+  <string name="force_safe_media_volume_disabled_title">Отключить безопасную проверку звука</string>
+  <string name="force_safe_media_volume_disabled_summary">Не ограничивать громкость медиа для наушников</string>
 </resources>
