--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -69,7 +69,7 @@
   
   <string name="increasing_ring_volume_option_title">Возрастающая громкость звонка</string>
   <string name="increasing_ring_ramp_up_title">Время увеличения</string>
-  <string name="increasing_ring_volume_option_summary">Увеличьте громкость звонка до выбранного уровня</string>
+  <string name="increasing_ring_volume_option_summary">Увеличение громкости звонка до выбранного уровня</string>
 
   <string name="ramp_up_time_ten">10c</string>
   <string name="ramp_up_time_twenty">20c</string>
