--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -22,7 +22,7 @@
   <string name="style_settings_title">Стиль</string>
   <string name="header_category_omni">OmniGears</string>
   <string name="omni_dashboard_summary">Настройте свое устройство</string>
-  <string name="style_settings_summary">Обои и другие крутости</string>
+  <string name="style_settings_summary">Стиль системы и другое</string>
   <string name="omni_device_parts">Возможности устройства</string>
   <string name="columns_menu">Раскладка столбцов</string>
   <string name="hide_summary_menu">Скрыть содержание</string>
