--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -20,8 +20,8 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <string name="style_settings_title">Стиль</string>
-  <string name="header_category_omni">OmniGears</string>
-  <string name="omni_dashboard_summary">Настройте свое устройство</string>
+  <string name="header_category_omni">Настройки Omni</string>
+  <string name="omni_dashboard_summary">Дополнительные настройки</string>
   <string name="style_settings_summary">Стиль системы и другое</string>
   <string name="omni_device_parts">Возможности устройства</string>
   <string name="columns_menu">Раскладка столбцов</string>
