--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -28,7 +28,7 @@
   <string name="hide_summary_menu">Скрыть содержание</string>
   <string name="bars_settings_title">Панели и экран блокировки</string>
   <string name="button_settings_title">Кнопки</string>
-  <string name="mod_version">Версия Omni</string>
+  <string name="mod_version">Версия Omnixel</string>
   <string name="mod_version_default">Неизвестно</string>
   <string name="more_settings_title">Ещё</string>
   <string name="global_actions_title">Меню кнопки питания</string>
