Rebrand to Pixel Addict

--- a/res/drawable/omnirom_logo.xml
+++ b/res/drawable/omnirom_logo.xml
@@ -17,31 +17,12 @@
 */
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
-    android:viewportWidth="512.000000"
-    android:viewportHeight="512.000000"
+    android:width="24.0dp"
+    android:height="24.0dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0"
     android:tint="?android:attr/colorControlNormal">
-    <group
-        android:translateY="512.000000"
-        android:scaleX="0.100000"
-        android:scaleY="-0.100000">
-        <path
-            android:fillColor="#FFFFFFFF"
-            android:strokeWidth="1"
-            android:pathData="M1425 4703 c-526 -71 -929 -439 -1041 -953 -18 -80 -19 -149 -19 -1200 0 -1051 1
--1120 19 -1200 104 -475 461 -832 936 -936 80 -18 150 -19 1230 -19 1080 0 1150 1
-1230 19 475 104 832 461 936 936 18 80 19 149 19 1200 0 1051 -1 1120 -19 1200
--102 468 -444 816 -916 933 -84 21 -102 21 -1215 23 -621 1 -1143 0 -1160 -3z
-m2248 -578 c183 -39 350 -170 433 -342 66 -136 64 -102 62 -1243 l-3 -1030 -70 97
-c-134 186 -378 410 -571 524 -41 24 -74 47 -74 51 0 5 65 122 143 261 79 138 149
-262 155 273 10 20 7 24 -46 52 l-57 31 -159 -280 c-87 -153 -161 -279 -165 -279 -3
-0 -39 14 -80 30 -394 161 -889 172 -1301 29 -63 -22 -122 -43 -132 -46 -12 -4 -49
-54 -169 265 l-154 271 -57 -31 c-53 -28 -56 -32 -46 -52 6 -11 73 -131 150 -265 76
--134 138 -246 138 -250 0 -3 -38 -28 -84 -54 -134 -78 -252 -172 -386 -306 -69 -70
--156 -170 -195 -224 l-70 -97 -3 1030 c-2 1141 -4 1107 62 1243 82 170 249 303 428
-342 96 21 2153 21 2251 0z m-1880 -2429 c104 -43 127 -180 42 -255 -61 -53 -139
--53 -201 1 -128 112 2 320 159 254z m1630 0 c104 -43 127 -180 42 -255 -61 -53
--139 -53 -201 1 -128 112 2 320 159 254z" />
-    </group>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M6,18c0,0.55 0.45,1 1,1h1v3.5c0,0.83 0.67,1.5 1.5,1.5s1.5,-0.67 1.5,-1.5L11,19h2v3.5c0,0.83 0.67,1.5 1.5,1.5s1.5,-0.67 1.5,-1.5L16,19h1c0.55,0 1,-0.45 1,-1L18,8L6,8v10zM3.5,8C2.67,8 2,8.67 2,9.5v7c0,0.83 0.67,1.5 1.5,1.5S5,17.33 5,16.5v-7C5,8.67 4.33,8 3.5,8zM20.5,8c-0.83,0 -1.5,0.67 -1.5,1.5v7c0,0.83 0.67,1.5 1.5,1.5s1.5,-0.67 1.5,-1.5v-7c0,-0.83 -0.67,-1.5 -1.5,-1.5zM15.53,2.16l1.3,-1.3c0.2,-0.2 0.2,-0.51 0,-0.71 -0.2,-0.2 -0.51,-0.2 -0.71,0l-1.48,1.48C13.85,1.23 12.95,1 12,1c-0.96,0 -1.86,0.23 -2.66,0.63L7.85,0.15c-0.2,-0.2 -0.51,-0.2 -0.71,0 -0.2,0.2 -0.2,0.51 0,0.71l1.31,1.31C6.97,3.26 6,5.01 6,7h12c0,-1.99 -0.97,-3.75 -2.47,-4.84zM10,5L9,5L9,4h1v1zM15,5h-1L14,4h1v1z"/>
 </vector>
