--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -19,15 +19,15 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="style_settings_title">Style</string>
-    <string name="header_category_omni">OmniGears</string>
-    <string name="omni_dashboard_summary">Omnify your device</string>
+    <string name="header_category_omni">Pixel Addict settings</string>
+    <string name="omni_dashboard_summary">Additional settings</string>
     <string name="style_settings_summary">Wallpapers and other swag</string>
     <string name="omni_device_parts">Device features</string>
     <string name="columns_menu">Columns layout</string>
     <string name="hide_summary_menu">Hide summary</string>
     <string name="bars_settings_title">Bars and lock screen</string>
     <string name="button_settings_title">Buttons</string>
-    <string name="mod_version">Omni version</string>
+    <string name="mod_version">Pixel Addict version</string>
     <string name="mod_version_default">Unknown</string>
     <string name="more_settings_title">More</string>
     <string name="global_actions_title">Power menu</string>
