--- a/res/values-ru/custom_strings.xml
+++ b/res/values-ru/custom_strings.xml
@@ -123,4 +123,7 @@
   <string name="select_default_usb_configuration_dialog_title">Выбрать конфигурацию USB</string>
   <string name="default_usb_configuration" translatable="false" >по умолчанию</string>
   <string name="select_usb_default_confguration_warning">ПРЕДУПРЕЖДЕНИЕ: Конфигурация USB по умолчанию также включена, когда устройство заблокировано!\n\nВы действительно хотите включить эту конфигурацию?</string>
+  <string name="usb_paranoia_connect_title">Безопасное подключение USB</string>
+  <string name="usb_paranoia_connect_summary">Включать только зарядку, когда USB подключен при заблокированном экране</string>
+  <string name="usb_category_title">USB</string>
 </resources>
